<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    >

    <View
        android:id="@+id/view_buttons"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:background="@color/colorLightBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_currgame"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:background="@color/colorLightBackground"
        app:layout_constraintStart_toStartOf="@+id/view_buttons"
        app:layout_constraintTop_toBottomOf="@+id/view_buttons" />

    <View
        android:id="@+id/view_currgame2"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:background="@color/colorLightBackground"
        app:layout_constraintEnd_toEndOf="@+id/view_buttons"
        app:layout_constraintTop_toBottomOf="@+id/view_buttons" />

    <TextView
        android:id="@+id/tv_drawncardtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:text="@string/text_drawn"
        app:layout_constraintStart_toStartOf="@id/view_currgame"
        app:layout_constraintTop_toTopOf="@id/view_currgame" />

    <TextView
        android:id="@+id/tv_drawncard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/view_currgame"
        app:layout_constraintTop_toTopOf="@+id/tv_drawncardtext"
        tools:text="220" />

    <TextView
        android:id="@+id/tv_sumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sumText"
        app:layout_constraintBottom_toBottomOf="@+id/view_currgame"
        app:layout_constraintStart_toStartOf="@+id/tv_drawncardtext" />

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_drawncard"
        app:layout_constraintTop_toTopOf="@+id/tv_sumText"
        tools:text="21" />

    <Button
        android:id="@+id/ntn_drawcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:ems="15"
        android:onClick="drawCardClick"
        android:text="@string/btn_draw"
        app:layout_constraintEnd_toEndOf="@id/view_buttons"
        app:layout_constraintStart_toStartOf="@id/view_buttons"
        app:layout_constraintTop_toTopOf="@+id/view_buttons" />

    <Button
        android:id="@+id/btn_surrender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorButton"
        android:ems="15"
        android:onClick="surrender"
        android:text="@string/btn_surrender"
        app:layout_constraintStart_toStartOf="@+id/ntn_drawcard"
        app:layout_constraintTop_toBottomOf="@+id/ntn_drawcard" />

    <TextView
        android:id="@+id/tv_gameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/view_buttons"
        app:layout_constraintStart_toStartOf="@id/view_buttons"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="gewonnen" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorButton"
        android:ems="15"
        android:onClick="newGame"
        android:text="@string/btn_newGame"
        app:layout_constraintStart_toStartOf="@+id/btn_surrender"
        app:layout_constraintTop_toBottomOf="@+id/btn_surrender" />

    <TextView
        android:id="@+id/tv_drawncardname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_currgame2"
        app:layout_constraintEnd_toEndOf="@+id/view_currgame2"
        app:layout_constraintStart_toStartOf="@+id/view_currgame2"
        tools:text="Heart 10" />

    <TextView
        android:id="@+id/tv_drawncardnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/card_drawnName"
        app:layout_constraintEnd_toEndOf="@+id/view_currgame2"
        app:layout_constraintStart_toStartOf="@+id/view_currgame2"
        app:layout_constraintTop_toTopOf="@+id/view_currgame2" />


</androidx.constraintlayout.widget.ConstraintLayout>